[gd_scene load_steps=6 format=2]

[ext_resource path="res://AddonSave/test/test.gd" type="Script" id=1]
[ext_resource path="res://AddonSave/test/Pixeled.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://AddonSave/icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="test" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="save" type="Button" parent="CanvasLayer"]
margin_right = 162.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="Button" parent="CanvasLayer"]
margin_left = 160.0
margin_right = 322.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screenshot" type="Button" parent="CanvasLayer"]
margin_left = 328.0
margin_right = 500.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Screenshot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 480, 304 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="player"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 2 )

[connection signal="pressed" from="CanvasLayer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/screenshot" to="." method="_on_screenshot_pressed"]
